# joint-control-pkgs

./: README.md
gazebo_joint_control/: CMakeLists.txt  Doxyfile.in  package.xml
gazebo_joint_control/config/: ControlTemplate.yaml
gazebo_joint_control/gz2_support/src/: JointControllerNewImpl.cpp
gazebo_joint_control/include/gazebo_joint_control/: GazeboJointControl.h  GazeboJointControlLocalImpl.h  GazeboJointStateClient.h  GazeboJointStatePublisher.h  GazeboJointTrajectoryServer.h  GazeboVersionHelpers.h  JointController.h
gazebo_joint_control/rrbot_example/config/: ControlParams.yaml  JointConfig.yaml  JointTrajectoryParams.yaml
gazebo_joint_control/rrbot_example/launch/: rrbot_simplified_gazebo.launch
gazebo_joint_control/rrbot_example/urdf/: rrbot_simplified.xacro  rrbot_simplified_joint_plugin.xacro
gazebo_joint_control/src/: GazeboJointControl.cpp  GazeboJointControlLocalImpl.cpp  GazeboJointControlLocalImplRegistration.cpp  GazeboJointStateClient.cpp  GazeboJointStatePublisher.cpp  GazeboJointTrajectoryServer.cpp  JointController.cpp
joint_trajectory_execution/: CMakeLists.txt  Doxyfile.in  README.md  package.xml
joint_trajectory_execution/config/: JointTrajectoryParams.yaml  JointTrajectoryParamsTemplate.yaml
joint_trajectory_execution/include/joint_trajectory_execution/: JointVelocityTracker.hpp  TrajectoryActionServer.h
joint_trajectory_execution/src/: TrajectoryActionServer.cpp
